# flamiche

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  mkdocs.yml  setup.cfg  techstack.md  techstack.yml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: lint.yml  publish.yml  stale.yml  tests.yml
docs/: conf.py  contents.rst  index.md  installation.md  make.bat
docs/first-steps/: install.rst  overview.rst
flamiche/: __init__.py  application.py  asgi.py  exceptions.py  http.py  router.py  routing.py  testing.py  types.py  wsgi.py
flamiche/handlers/: asgi.py  base.py  wsgi.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
tests/: test_dummy.py
