[metadata]
name = Flamiche
version = attr: flamiche.__version__
url = https://github.com/aryaniyaps/flamiche
project_urls =
    Homepage = https://github.com/aryaniyaps/flamiche
    Issue Tracker = https://github.com/aryaniyaps/flamiche/issues
    Source Code = https://github.com/aryaniyaps/flamiche
license = BSD
author = Aryan Iyappan
author_email = aryaniyappan2006@gmail.com
description = Fast, unopinionated, minimalist ASGI web framework for Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 88
filename = flamiche,tests

[isort]
src_paths = flamiche,tests
profile = black
atomic = true
line_length = 88

[coverage:run]
branch = true
source =
    flamiche
    tests

[mypy]
python_version = 3.8
ignore_missing_imports = True
files = flamiche
